--- a/rebar.config
+++ b/rebar.config
@@ -30,7 +30,8 @@
 
 {profiles, [{prod, [{relx,
                      [{mode, prod},
-                      {sys_config_src, "./config/prod_sys.config.src"}]}]}]}.
+                      {sys_config_src, "./config/prod_sys.config.src"}]}]},
+                    {test, [{deps, [{gun, "1.3.3"}]}]}]}.
 
 %% Plugins for rebar3
 {plugins, [
