--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
                ]}.
 
 {deps, [
-        {nova, ".*", {git, "https://github.com/novaframework/nova.git", {branch, "master"}}}
+        {nova, ".*", {git, "https://github.com/novaframework/nova.git", {branch, "ws-routes"}}}
        ]}.
 
 
