--- a/rebar.config
+++ b/rebar.config
@@ -31,7 +31,17 @@
 {profiles, [{prod, [{relx,
                      [{mode, prod},
                       {sys_config_src, "./config/prod_sys.config.src"}]}]},
-                    {test, [{deps, [{gun, "1.3.3"}]}]}]}.
+                    {test, [
+                      {erl_opts, []},
+                      {deps, [
+                          {gun, "2.0.1"}
+                      ]},
+                      {cover_enabled, true},
+                      {cover_opts, [verbose]},
+                      {ct_opts, [{sys_config, "./config/dev_sys.config.src"}]},
+                      {extra_src_dirs, []},
+                      {xref_extra_paths, []}
+                  ]}]}.
 
 %% Plugins for rebar3
 {plugins, [
