--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 %% -*- mode: erlang;erlang-indent-level: 4;indent-tabs-mode: nil -*-
 
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info, {d, 'USE_STACKTRACES'}]}.
 {src_dirs, ["src", "src/controllers"]}.
 {shell, [{config, "./config/dev_sys.config.src"}]}.
 
@@ -32,7 +32,7 @@
                      [{mode, prod},
                       {sys_config_src, "./config/prod_sys.config.src"}]}]},
                     {test, [
-                      {erl_opts, []},
+                      {erl_opts, [{d, 'USE_STACKTRACES'}]},
                       {deps, [
                           {gun, "2.0.1"}
                       ]},
