--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -1,6 +1,6 @@
 name: Build and test
 
-on: [push]
+on: [push, repository_dispatch]
 
 jobs:
   build:
@@ -11,6 +11,7 @@ jobs:
       matrix:
         otp: ['24.1.3', '25.1.1', '26.1']
         rebar3: ['3.22.0']
+
     steps:
     - uses: actions/checkout@v4
     - uses: erlef/setup-beam@v1
@@ -20,5 +21,9 @@ jobs:
         version-type: strict
     - name: Compile
       run: rebar3 compile
-    - name: Run tests
+    - name: Event Information
+      run: |
+        echo "Event '${{ github.event.action }}' received from '${{ github.event.client_payload.repository }}'"
+    - name: PONG - Dispatch response to received PING
+      if: github.event.action == 'start_test'
       run: rebar3 ct
