--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -1,6 +1,6 @@
 name: Build and test
 
-on: [push]
+on: [repository_dispatch]
 
 jobs:
   build:
@@ -21,5 +21,9 @@ jobs:
         version-type: strict
     - name: Compile
       run: rebar3 compile
-    - name: Test
+    - name: Event Information
+      run: |
+        echo "Event '${{ github.event.action }}' received from '${{ github.event.client_payload.repository }}'"
+    - name: PONG - Dispatch response to received PING
+      if: github.event.action == 'start_test'
       run: rebar3 ct
