--- a/.github/workflows/run_nra.yml
+++ b/.github/workflows/run_nra.yml
@@ -22,6 +22,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        repository: novaframework/nova_request_app
+        ref: main
     - uses: erlef/setup-beam@v1
       with:
         otp-version: ${{matrix.otp}}
