--- a/rebar.config
+++ b/rebar.config
@@ -44,7 +44,7 @@
                   ]}]}.
 
 %% Plugins for rebar3
-{plugins, [
+{project_plugins, [
            {rebar3_erlydtl_plugin, ".*",
             {git, "https://github.com/tsloughter/rebar3_erlydtl_plugin.git", {branch, "master"}}},
            {rebar3_erldb_plugin, ".*",
