Add nova_json_schemas dependency
This currently needs to be run with `NOVA_BRANCH=refs/tags/v0.12.1` in
order to run the tests, since Nova 0.13 currently isn't compatible with the
nova_json_schemas plugin.

--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
                ]}.
 
 {deps, [
-        {nova, ".*", {git, "https://github.com/novaframework/nova.git", {branch, "master"}}}
+        {nova_json_schemas, {git, "https://github.com/novaframework/nova_json_schemas", {branch, "master"}}}
        ]}.
 
 
